# mODEler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checklist.txt  environment.yml  main.py  pyproject.toml  requirements.txt  toy_model.json
benchmarks/: performance_benchmarks.csv
docs/: CHANGELOG_backend_v0_2_snippet.md  README_backend_section_snippet.md  backend_alpha_api.md  backend_api_v0_2.md  backend_smoke_tests.md  cli_usage.md  development_roadmap.md  global_observable_fitting.md  gui_integration_guide.md  hsqc_config_reference.md  reaction_syntax.md  recommended_hsqc_workflows.md
fcs/: linear_homo.txt  modeler_by_time.csv  modeler_by_time_clean.csv  monomer_loss.txt  order3_combo.txt
fcs_ode/: linear_combo.txt  linear_step.txt  modeler_by_time_10_to_220.csv  modeler_fcs_features_by_time_10_to_220.csv  order2_combo.txt  order2_homo.txt  order2_step.txt  order3_step.txt  run_all_global_models.py  run_all_global_models_progress.py  run_modeler_10_to_220.py
scripts/: add_engine_name_to_configs.py  benchmark_acceleration_targets.py  benchmark_batched_projection.py  benchmark_projection_engine_batch_methods.py  benchmark_projection_engines.py  benchmark_variable_projection_dataframe_assembly.py  benchmark_variable_projection_engines.py  extract_fcs_timecourse_features.py  fit_fcs_surface_txt_models.py  list_backend_engines.py  patch_variable_projection_dataframe_assembly.py  plot_fcs_outputs.py  plot_fcs_requested_outputs.py  plot_fcs_surface_outputs.py  plot_fcs_txt_model_outputs.py  plot_raw_fcs_curves_by_time.py  profile_variable_projection_objective.py  (+10 more)
(+652 files in other folders)
