[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mODEller"
version = "0.1.0"
description = "GUI software for ODE"
authors = [
	{name = "Ben Shin and Sebastian Joseph"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
	"numpy",
	"scipy",
	"pandas",
	"matplotlib",
	"sympy",
	"PySide6",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"black",
	"ruff",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
